<resources>
    <string name="app_name">EXS Synergy</string>

    <!-- GENERAL -->
    <string name="home">Home</string>
    <string name="back">Back</string>
    <string name="submit">Submit</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="done">Done</string>
    <string name="skip">Skip</string>
    <string name="blank"> </string>
    <string name="settings">Settings</string>
    <string name="please_wait">Please wait &#8230;</string>
    <string name="required">* Required</string>
    <string name="search">Search</string>
    <string name="searchhint">Search &#8230;</string>
    <string name="status">Status</string>
    <string name="list">List</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="open">Open</string>
    <string name="info">Info</string>
    <string name="success">Success</string>
    <string name="error">Error</string>
    <string name="want_to_exit">Do you want to exit the application?</string>
    <string name="show">Show</string>
    <string name="hide">Hide</string>
    <string name="ok">OK</string>

    <!-- GENERAL ERROR -->
    <string name="record_not_found">No Record</string>
    <string name="please_retry_again">Please retry again</string>
    <string name="MSG_NO_INTERNET">Please check your Internet connection.</string>
    <string name="item_not_found">Item not found</string>
    <string name="map_not_supported">Map not supported.</string>
    <string name="error_msg">Something went wrong. Please try again later.</string>


    <!--  CAMPAIGN -->
    <string name="client">Client</string>
    <string name="project">Project</string>
    <string name="campaign_name">Name</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>


    <!--- INSPECTION -->
    <string name="equipment_tag_no">Equipment Tag No</string>
    <string name="equipment">Equipment</string>
    <string name="inspector">Inspector</string>
    <string name="ex_status">Ex Status</string>
    <string name="findings">Findings</string>


    <!-- CUSTOMER -->
    <string name="name">Full Name</string>
    <string name="email">Email</string>
    <string name="telephone">Telephone</string>
    <string name="tel_prefix">+601</string>
    <string name="password">Password</string>
    <string name="re_password">Confirm Password</string>
    <string name="gender">Gender</string>
    <string name="birthday">Birthday</string>
    <string name="language">Language</string>
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="points">Points</string>
    <string name="level">Level</string>

    <string name="err_name">Name is required!</string>
    <string name="err_email">Email is required!</string>
    <string name="err_invalid_email">Please enter a valid email address!</string>
    <string name="err_password">Password must be at least 6 characters!</string>
    <string name="err_re_password">Please enter the same password!</string>
    <string name="err_telephone">Telephone number is required!</string>

    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="logout">Logout</string>
    <string name="signin">Sign In</string>
    <string name="signin_as">You are signed in as</string>
    <string name="forgot_pass"><u>Forgot Password</u></string>
    <string name="register"><u>Register New Account</u></string>
    <string name="login_success">Login Success</string>
    <string name="login_failed">Login Failed</string>
    <string name="registration">Registration</string>
    <string name="register_success">Congratulation! You have succesfully registered and you can login now.</string>
    <string name="register_failed">Your email address already in our database. Please click Forgot password to retrieve your email.</string>
    <string name="find_your_account">Find Your Account</string>
    <string name="please_enter_email_to_search_your_account">Please enter your email address to search for your account</string>
    <string name="please_enter_username_to_search_your_account">Please enter your username to search for your account</string>
    <string name="forgot_success">You new password has been sent to your email. Please check your email and come back soon.</string>
    <string name="forgot_failed">Sorry. Your email is not in our database. Please try again or register new account.</string>
    <string name="tqforgot">Thank You.</string>
    <string name="tqreg">Thank You for Your Registration.</string>
    <string name="fbemail">Please provide your email address to proceed.</string>
    <string name="fbemail_failed">Error. Email is required for the Registration.</string>
    <string name="agreeto_tnc">By clicking submit you are agreeing to the &lt;u&gt;Terms and Conditions&lt;/u&gt;</string>
    <string name="login_toproceed">Please login to proceed.</string>

    <string name="updatedetails">Update Details</string>
    <string name="changepwd">Change Password</string>
    <string name="currentpwd">Current Password</string>
    <string name="newpwd">New Password</string>
    <string name="re_newpwd">Confirm New Password</string>
    <string name="error_pwdshort">Password should not less than 6 characters</string>
    <string name="error_re_newpwd">Confirm Password does not match</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_campaign">Campaign</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_data_management">Data Management</string>
    <string name="menu_dpr">DPR List</string>
    <string name="menu_dashboard">Dashboard</string>
</resources>
