<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/base_down">

    <ScrollView
        android:id="@+id/scrollableContents"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/find_your_account" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:text="@string/please_enter_username_to_search_your_account" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="10dp"
                android:alpha="0.9"
                android:background="@drawable/login_edittext"
                android:hint="@string/username"
                android:paddingLeft="5dp"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btSubmit"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="20dp"
                android:background="@color/base_up"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textAllCaps="false"
                android:text="@string/submit" />

        </LinearLayout>

    </ScrollView>
</RelativeLayout>