<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.exs.appexssynergy.Dashboard">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/tvNoRecord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:textSize="14sp"
        android:textStyle="italic"
        android:textColor="@color/result_view"
        android:text="No record found"
        />

    // custom Headers
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:background="@color/lightgrey"
        android:layout_width="fill_parent"
        android:layout_height="35dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:textSize="12sp"
            android:textStyle="bold"
            android:text="#" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="12sp"
            android:textStyle="bold"
            android:text="@string/client" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="12sp"
            android:textStyle="bold"
            android:text="@string/project" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:textSize="12sp"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/campaign_name" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="12sp"
            android:textStyle="bold"
            android:text="@string/start_date" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="12sp"
            android:textStyle="bold"
            android:text="@string/end_date" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:textSize="12sp"
            android:gravity="center"
            android:textStyle="bold"
            android:text="Action" />

    </LinearLayout>

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:divider="@color/lavender"
        android:footerDividersEnabled="true"
        android:dividerHeight="1sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"></ListView>
</FrameLayout>