<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.exs.appexssynergy.Dashboard">

    <LinearLayout
            android:layout_width="fill_parent"
            android:orientation="vertical"
            android:layout_height="fill_parent">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_height="45dp">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:weightSum="1"
                    android:orientation="horizontal"
                    android:layout_height="fill_parent">

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:orientation="horizontal"
                        android:layout_weight="0.4"
                        android:gravity="center|left"
                        android:padding="0dp"
                        android:layout_height="fill_parent">

                        <Spinner
                            android:id="@+id/spinner_inspector"
                            android:layout_width="wrap_content"
                            android:textAlignment="center"
                            android:layout_marginLeft="10dp"
                            android:layout_height="40dp"></Spinner>


                        <View
                            android:layout_width="5dp"
                            android:layout_height="fill_parent"/>

                        <EditText
                            android:id="@+id/edt_equipment_tag"
                            android:layout_width="130dp"
                            android:layout_height="40dp"
                            android:textSize="12sp"
                            android:textColor="@color/black"
                            android:gravity="center"
                            android:background="@drawable/login_edittext"
                            android:hint="Equipment Tag"/>

                        <View
                            android:layout_width="5dp"
                            android:layout_height="fill_parent"/>

                        <EditText
                            android:id="@+id/edt_date"
                            android:layout_width="100dp"
                            android:layout_height="40dp"
                            android:textSize="12sp"
                            android:editable="false"
                            android:visibility="gone"
                            android:textColor="@color/black"
                            android:gravity="center"
                            android:background="@drawable/login_edittext"
                            android:hint="Date"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:orientation="horizontal"
                        android:layout_weight="0.6"
                        android:background="#ffffff"
                        android:padding="0dp"

                        android:gravity="center|right"
                        android:layout_height="fill_parent">

                        <LinearLayout
                            android:id="@+id/btn_search"
                            android:layout_width="70dp"
                            android:background="@drawable/login_edittext"
                            android:gravity="center"
                            android:padding="5dp"
                            android:layout_marginRight="5dp"
                            android:layout_height="40dp">
                            <Button
                                android:layout_width="20dp"

                                android:text=""
                                android:textSize="9sp"
                                android:layout_marginRight="3dp"
                                android:background="@drawable/ic_search"
                                android:textColor="@color/white"
                                android:layout_height="20dp" />

                            <TextView
                                android:id="@+id/txt_search"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:gravity="center"
                                android:textSize="12sp"
                                android:textStyle="normal"
                                android:text="Search" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/btn_reset"
                            android:layout_width="70dp"
                            android:background="@drawable/login_edittext"
                            android:gravity="center"
                            android:padding="5dp"
                            android:layout_marginRight="5dp"
                            android:layout_height="40dp">

                            <Button
                                android:layout_width="20dp"
                                android:layout_marginRight="3dp"
                                android:text=""
                                android:textSize="9sp"
                                android:background="@drawable/ic_reset"
                                android:textColor="@color/white"
                                android:layout_height="20dp" />

                            <TextView
                                android:id="@+id/txt_reset"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:gravity="center"
                                android:textSize="12sp"
                                android:textStyle="normal"
                                android:text="Reset" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/btn_add_new_inspection"
                            android:layout_width="90dp"
                            android:background="@drawable/login_edittext"
                            android:gravity="center"
                            android:padding="5dp"
                            android:layout_marginRight="5dp"
                            android:layout_height="40dp">

                            <Button
                                android:layout_width="20dp"
                                android:layout_marginRight="3dp"
                                android:text=""
                                android:textSize="9sp"
                                android:background="@drawable/ic_add"
                                android:textColor="@color/white"
                                android:layout_height="20dp"/>

                            <TextView
                                android:id="@+id/txt_add_new_inspection"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:gravity="center"
                                android:textSize="12sp"
                                android:textStyle="normal"
                                android:text="Inspection" />
                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:background="@color/white"
                android:layout_marginBottom="2dp"
                android:layout_height="40dp">

                <HorizontalScrollView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:id="@+id/horizontalScrollView"
                    android:layout_above="@+id/linearLayout3"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:gravity="center"
                        android:id="@+id/date_container"
                        android:orientation="horizontal">

                    </LinearLayout>
                </HorizontalScrollView>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:background="#EEEEEE"
                android:layout_width="fill_parent"
                android:layout_height="35dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:text="#" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:text="@string/date" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:text="@string/equipment_tag_no" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:text="@string/equipment" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="12sp"
                    android:text="@string/inspector" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:text="@string/status" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:textSize="12sp"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:text="@string/ex_status" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:text="@string/findings" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:text="Action" />

            </LinearLayout>


            <!-- TODO: Update blank fragment layout -->
            <TextView
                android:id="@+id/tvNoRecord"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="50dp"
                android:textSize="12sp"
                android:visibility="gone"
                android:textColor="@color/result_view"
                android:text="No record found"
                />

            <ListView
                android:id="@+id/list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:divider="@color/lavender"
                android:footerDividersEnabled="true"
                android:dividerHeight="1sp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"></ListView>
        </LinearLayout>

</FrameLayout>